# esp32-ble-pinpad

./: .gitignore  CHANGELOG.md  README.md  example.yml
components/esp32_ble_pinpad/: __init__.py  automation.h  esp32_ble_pinpad_component.cpp  esp32_ble_pinpad_component.h  otp.cpp  otp.h
tools/pypinpad/: README.md  pypinpad.py  pyproject.toml
tools/pypinpad/src/pypinpad/: __init__.py
