[tool.poetry]
name = "pypinpad"
version = "0.1.0"
description = ""
authors = ["mike wakerly <opensource@hoho.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bleak = "^0.19.5"
rich = "^13.0.1"
click = "^8.1.3"
rich-click = "^1.6.0"
pyotp = "^2.8.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
