[tool.poetry]
name = "pypinpad"
version = "0.1.0"
description = ""
authors = ["mike wakerly <opensource@hoho.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bleak = "^0.21.1"
rich = "^13.7.1"
click = "^8.1.7"
rich-click = "^1.7.4"
pyotp = "^2.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
